<resources>
    <string name="app_name">CocktailsApp</string>
    <string name="hello_blank_fragment">Here is the fragment</string>
    <string name="ingredients">Ingredients:</string>
    <string name="favorite_cocktails">Favorite Cocktails</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="cocktails">Cocktails</string>
    <string name="search_for_any_product_or_cocktail">Search for any product or cocktail</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="favorite">Favorite</string>
    <string name="cocktail">Cocktail</string>
    <string name="sign_in">Sign In</string>
    <string name="select_language">Select Language</string>
    <string name="english" translatable="false">English</string>
    <string name="romanian" translatable="false">Romanian</string>
    <string name="contact" translatable="false">Contact</string>
    <string name="subject" translatable="false">Subject</string>
    <string name="email_address" translatable="false">E-mail address</string>
    <string name="phone_brand" translatable="false">Phone brand</string>
    <string name="phone_model" translatable="false">Phone model</string>
    <string name="system_version" translatable="false">System version</string>
    <string name="your_message" translatable="false">Message</string>
    <string name="add_picture" translatable="false">Add picture</string>
    <string name="send_feedback" translatable="false">Send feedback</string>
    <string name="faq_title" translatable="false">Frequently Asked Questions</string>
    <string name="faq_question_1" translatable="false">How do I create an account?</string>
    <string name="faq_answer_1" translatable="false">To create an account, click on the \'Register\' button on the login screen. Fill in your first name, last name, email address, and password, then click \'Register\'. You will receive a confirmation email to activate your account.</string>
    <string name="faq_question_2" translatable="false">What information must I provide to register?</string>
    <string name="faq_answer_2" translatable="false">You need to provide your first name, last name, email address, and create a password.</string>
    <string name="faq_question_3" translatable="false">How do I reset my password?</string>
    <string name="faq_answer_3" translatable="false">If you forgot your password, click on the \'Forgot password?\'; link on the login screen. Enter your email address and you will receive instructions on how to reset your password.</string>
    <string name="faq_question_4" translatable="false">How do I search for cocktail recipes?</string>
    <string name="faq_answer_4" translatable="false">To search for cocktail recipes, use the search bar at the top of the main screen. Enter the name of the cocktail or any ingredient you have, and a list of matching recipes will be displayed.</string>
    <string name="faq_question_5" translatable="false">Can I save my favorite cocktails?</string>
    <string name="faq_answer_5" translatable="false">Yes, you can save your favorite cocktails by clicking on the\'Favorite\' button on the cocktail recipe page. You can access all your favorite cocktails from the \'Favorites\' section in the menu.</string>
    <string name="faq_question_6" translatable="false">How do I add a new cocktail recipe?</string>
    <string name="faq_answer_6" translatable="false">To add a new cocktail recipe, go to the \'Add\' section from the menu. Fill in the required details like title, ingredients, and description, then click \'Submit\'. Your recipe will be added to the list.</string>
    <string name="faq_question_7" translatable="false">How do I edit my personal information?</string>
    <string name="faq_answer_7" translatable="false">To edit your personal information, go to the \'Settings\' section from the menu. Here you can update your name, email address, and password.</string>
    <string name="faq_question_8" translatable="false">What should I do if the app is not working properly?</string>
    <string name="faq_answer_8" translatable="false">If you encounter any issues with the app, try restarting it. If the problem persists, contact our support team through the \'Contact\' section in the menu.</string>
    <string name="faq_question_9" translatable="false">Is my personal information safe?</string>
    <string name="faq_answer_9" translatable="false">Yes, your personal information is securely stored and encrypted. We do not share your information with third parties without your consent.</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="about_application">About Application</string>
</resources>
